<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.meizi.ZoomMeiziAty">

    <item android:id="@+id/action_like"
        android:title="@string/action_like"
        android:checked="true"
        tools:icon="@mipmap/ico_like_nor"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_more"
        android:icon="@mipmap/ic_menu_add"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_share"
                android:title="@string/action_share"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/action_download"
                android:title="@string/action_download"
                app:showAsAction="never" /><!--android:icon="@mipmap/ico_download"-->

        </menu>
    </item>

</menu>